20 Dec 96:
  o Fixed bug that caused intersect3 to return bogus results if a list item
    was duplicated in the second list.
-------------------------------------------------------------------------------
22 Dec 96:
  o Fixed unlink compat function failing to unlink a symbolic link.
-------------------------------------------------------------------------------
02 Jan 97:
  o Changed to compile shared libraries with -fpic and +z.
  o Added Win32 support for ftruncate, close-on-exec and partial support for
    dup-ing and open file.  Supplied by Alan Dewar <alan@calgary.hp.com>.
-------------------------------------------------------------------------------
01 May 97:
  o More than 50% of the commands provided by Extended Tcl have been rewritten
    to use the new object system.
-------------------------------------------------------------------------------
11 May 97:
  o TclX_ErrorExit now has a description field that says why the exit path
    was taken, making startup failures easier to debug.
-------------------------------------------------------------------------------
06 Jun 97:
  o Fixed frename compat function to overwrite existing files.
-------------------------------------------------------------------------------
13 Jun 97:
  o Converted more commands to object system.
===============================================================================
16 Jun 97: Released TclX 8.0.0 Beta 1
17 Jun 97: Re-releases TclX 8.0.0 Beta 1 due to mangled patch.
===============================================================================
 4 Jul 97:
  o Converted all commands that can be converted to work with binary data;
    documented those that don't support binary data.
  o Modified signals to be better behaved with multiple interpreters.
    Thanks to Viktor Dukhovni <viktor@esm.com> for the patch.
  o Fix trap signal handler overwriting interp result.
-------------------------------------------------------------------------------